<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_input_expression"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#424242"
        android:text=""
        android:textAlignment="viewEnd"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/txt_result"
        />

    <TextView
        android:id="@+id/txt_result"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/white"
        android:text=""
        android:textAlignment="viewEnd"
        app:layout_constraintTop_toBottomOf="@+id/txt_input_expression"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/table_calculator"
        />
    <TableLayout
        android:id="@+id/table_calculator"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_input_expression"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        style="?android:attr/buttonBarButtonStyle"
        android:stretchColumns="*"
        android:paddingTop="25dp"
        android:background="@color/light_light_grey"
        >
<!--        android:stretchColumns="1"-->


        <TableRow
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            >

            <Button
                android:id="@+id/btn_c"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/c"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btn_divide"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/divide"
                style="?android:attr/buttonBarButtonStyle" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_num7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/num7"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btn_num8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/num8"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btn_num9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/num9"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btn_multiply"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/multiply"
                style="?android:attr/buttonBarButtonStyle" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_num4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/num4"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btn_num5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/num5"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btn_num6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/num6"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btn_minus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:text="@string/minus"
                style="?android:attr/buttonBarButtonStyle" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_num1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/num1"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btn_num2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/num2"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btn_num3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/num3"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btn_plus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/plus"
                style="?android:attr/buttonBarButtonStyle" />

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            >
            <Button
                android:id="@+id/btn_num0"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/num0"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btn_dot"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/dot"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/btn_equals"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/equals"
                style="?android:attr/buttonBarButtonStyle" />
        </TableRow>
    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>